section row gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ header{
 }
 
 nav{
+  height: 60px;
   width: 100%;
   color: white;
   display: flex;
